<resources>
    <string name="app_name">Expert System</string>
    <string name="start_assessment">Rozpocznij</string>
    <string name="expert_system">System ekspertowy</string>
    <string name="digestive_tract_diseases_diagnosis">Diagnostyka chorób przewodu pokarmowego</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Dalej</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="skip">Pomiń</string>
    <string name="help">Pomoc</string>
    <string name="finish_diagnosis">Zakończ diagnostykę</string>
    <string name="diagnosis_results">Wyniki diagnostyki</string>
    <string name="risk_groups">Grupy ryzyka</string>
    <string name="diseases">Choroby</string>
    <string name="medical_diagnosis">Diagnostyka medyczna</string>
    <string name="continue_diagnosis">Kontynuuj</string>
    <string name="premises_implying_the_conclusion">Przesłanki prowadzące do konkluzji:</string>
    <string name="explanation">Objanienie</string>
    <string name="condition_status">condition status</string>
</resources>
